--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost/distance?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=994602
+spring.datasource.password=root
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
