--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost/distance?createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.jpa.database=mysql
+#spring.datasource.url=jdbc:mysql://localhost/distance?createDatabaseIfNotExist=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+spring.jpa.database=H2
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
@@ -9,3 +14,5 @@ spring.jpa.generate-ddl=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
 spring.jackson.date-format=yyyy-MM-dd
+logging.level.org.springframework.web=DEBUG
+
