Adicionado consulta por filtro no serviço de categoria

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,11 @@ spring.jpa.generate-ddl=true
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
+logging.level.org.apache.http=DEBUG
+
 spring.jackson.date-format=yyyy-MM-dd
+
 logging.level.org.springframework.web=DEBUG
+
+logging.level.org.apache.http.wire=DEBUG
 
